manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: v1
kind: Namespace
metadata:
  name: it
---
apiVersion: v1
kind: Namespace
metadata:
  name: science
